Change inactive window frame color per the spec.

New colors:
* Inactive normal: #E7EAED
* Inactive incognito: GoogleGrey800

Bug: 863094
Change-Id: Ifb11031efffcf9116a8d076cc20f71c6cc4f0117
Reviewed-on: https://chromium-review.googlesource.com/1139041
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575744}
Former-commit-id: 0b17461955c48cdcf93b2424dcd620fa2ee54077